--- a/src/components/lexical-editor/styles.css
+++ b/src/components/lexical-editor/styles.css
@@ -10,3 +10,11 @@
     top: 16px;
     padding-left: 8px;
 }
+
+.lexical-editor-bold {
+    color: red;
+}
+
+.lexical-editor-italic {
+    color: green;
+}
