--- a/src/components/lexical-editor/styles.css
+++ b/src/components/lexical-editor/styles.css
@@ -7,7 +7,7 @@
 
 .placeholder {
     position: absolute;
-    top: 16px;
+    top: 37px;
     padding-left: 8px;
 }
 
@@ -17,4 +17,8 @@
 
 .lexical-editor-italic {
     color: green;
+}
+
+.lexical-editor-h1 {
+    background: blanchedalmond;
 }
